<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BioLock</string>
    <string name="action_settings">Settings</string>
    <string name="device_title">Devices</string>
    <string name="request_print">Place Finger on Sensor</string>
    <string name="new_lock"><u>New Lock</u></string>
    <string name="startup_message">ECE 492 - Group 9</string>
    <string name="splash_desc">BioLock Logo</string>
    <string name="enter_ip">Enter IP Address</string>
    <string name="sample_ip">0.0.0.0</string>
    <string name="detect_lock"><u>Search For Lock</u></string>
    <string name="lock_detected">Lock Detected</string>
    <string name="print_detected">Fingerprint Detected</string>
    <string name="manage">Manage</string>
    <string name="display_users">Users</string>
    <string name="display_roles">Roles</string>
    <string name="display_log">Log</string>
    <string name="unlock">Unlock</string>
    <string name="display_userInfo">User Info</string>
    <string name="userName">Name</string>
    <string name="sampleName">Firstname Lastname</string>
    <string name="enabled">Enabled</string>
    <string name="fingerprint">Fingerprints</string>
    <string name="fingerprint_name">Fingerprint Name</string>
    <string name="enroll_print"><u>Enroll New Print</u></string>
    <string name="delete"><u>Delete</u></string>
    <string name="update"><u>Update</u></string>
    <string name="new_role"><u>Add New Role</u></string>
    <string name="new_user"><u>Add New User</u></string>
    <string name="display_roleInfo">Role Info</string>
    <string name="sampleRole">Role Name</string>
    <string name="roleName">Role</string>
    <string name="access_hours">Access Hours</string>
    <string name="ipName">IP Name</string>
    <string name="add_role"><u>Add Role</u></string>
    <string name="enabledAdmin">Admin</string>
    <string name="add_sched">Add Schedule</string>
    <string name="display_schedInfo">Schedule</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">R</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="startTime">Start Time</string>
    <string name="sampleTime">00:00</string>
    <string name="endTime">End Time</string>
    <string name="sampleDate">YYYY-MM-DD</string>
    <string name="picture">Picture</string>
    <string name="access">Access</string>
    <string name="accessDate">Access Date</string>
    <string name="accessTime">Access Time</string>
    <string name="display_time">Time</string>
    <string name="setTime"><u>Set Date and Time</u></string>
    <string name="setCurrTime"><u>Set Current Date and Time</u></string>
    <string name="dateBlank">____-__-__</string>
    <string name="timeBlank">__:__</string>
    <string name="changeDate"><u>Change Date</u></string>
    <string name="changeTime"><u>Change Time</u></string>
     <string name="logout">Logout</string>

</resources>
