<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:text="@string/display_time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/setCurrTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:clickable="true"
        android:onClick="setCurrentDateTime"
        android:text="@string/setCurrTime"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/editTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editDate"
        android:layout_below="@+id/editDate"
        android:layout_marginRight="20dp"
        android:layout_marginTop="31dp"
        android:text="@string/timeBlank"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/changeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTime"
        android:layout_alignBottom="@+id/editTime"
        android:layout_alignRight="@+id/setCurrTime"
        android:layout_marginRight="11dp"
        android:clickable="true"
        android:onClick="changeTime"
        android:text="@string/changeTime"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/changeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTime"
        android:layout_alignLeft="@+id/changeTime"
        android:clickable="true"
        android:onClick="changeDate"
        android:text="@string/changeDate"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/setTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:onClick="setTime"
        android:text="@string/setTime"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/editDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/setCurrTime"
        android:layout_below="@+id/time"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="66dp"
        android:text="@string/dateBlank"
        android:textSize="20sp" />

</RelativeLayout>