<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewDevice" >

    <TextView
        android:id="@+id/newLockTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:layout_marginTop="70sp"
        android:gravity="center_horizontal"
        android:text="@string/enter_ip"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/ipName"
        android:layout_width="200dp"
       	android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:ems="20" 
        android:hint="@string/ipName"
        android:gravity="center"
        android:inputType="textWebEditText" />

    <EditText
        android:id="@+id/ip_address"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40sp"
        android:ems="20"
        android:gravity="center"
        android:hint="@string/sample_ip"
        android:inputType="textWebEditText" />

    <TextView
        android:id="@+id/lock_detected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60sp"
        android:text="@string/lock_detected"
        android:textColor="#000000"
        android:textSize="20sp" 
        android:visibility="invisible" />
    
    <TextView
        android:id="@+id/detect_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60sp"
        android:clickable="true"
        android:onClick="searchLock"
        android:text="@string/detect_lock"
        android:textColor="@color/selector"
        android:textSize="25sp" />

</LinearLayout>