<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/newUserTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:text="@string/display_userInfo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/userNameFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userName"
        android:layout_alignBottom="@+id/userName"
        android:layout_alignRight="@+id/deleteUser"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/userName"
        android:ems="10"
        android:hint="@string/sampleName"
        android:inputType="textPersonName" >

    </EditText>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newUserTitle"
        android:layout_below="@+id/newUserTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25sp"
        android:text="@string/userName"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/enabledUserStatusBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/userNameFill"
        android:layout_alignTop="@+id/enabledStatus"
        android:layout_marginRight="16dp" />
    
    <TextView
        android:id="@+id/enabledStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userName"
        android:layout_below="@+id/userNameFill"
        android:layout_marginTop="30dp"
        android:text="@string/enabled"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/userPrints"
        android:layout_width="wrap_content"
        android:layout_height="55sp"
        android:layout_alignRight="@+id/enabledUserStatusBox"
        android:layout_alignTop="@+id/newUserTitle"
        android:layout_marginTop="220dp"
        android:layout_toRightOf="@+id/userName"
        android:focusable="false" >

    </ListView>

    <TextView
        android:id="@+id/enrollPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fingerprint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:clickable="true"
        android:onClick="enrollPrint"
        android:text="@string/enroll_print"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fingerprint"
        android:layout_below="@+id/enrollPrint"
        android:layout_marginTop="10dp"
        android:text="@string/display_roles"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/userRoles"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_alignLeft="@+id/userPrints"
        android:layout_alignRight="@+id/userPrints"
        android:layout_alignTop="@+id/newUserTitle"
        android:layout_below="@+id/role"
        android:layout_marginTop="340dp" >

    </ListView>

    <TextView
        android:id="@+id/fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enabledStatus"
        android:layout_below="@+id/enabledStatus"
        android:layout_marginTop="30dp"
        android:text="@string/fingerprint"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/deleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userRoles"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="47dp"
        android:layout_toRightOf="@+id/updateUser"
        android:clickable="true"
        android:onClick="confirmDelete"
        android:text="@string/delete"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/updateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/deleteUser"
        android:layout_alignBottom="@+id/deleteUser"
        android:layout_toRightOf="@+id/userName"
        android:clickable="true"
        android:onClick="updateUser"
        android:text="@string/update"
        android:textSize="25sp" />

</RelativeLayout>