<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/newRoleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:text="@string/display_roleInfo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/roleNameFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/roleName"
        android:layout_alignBottom="@+id/roleName"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/roleName"
        android:ems="10"
        android:hint="@string/sampleRole"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/roleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newRoleTitle"
        android:layout_below="@+id/newRoleTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="19dp"
        android:text="@string/roleName"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/enabledRoleStatusBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/roleNameFill"
        android:layout_alignTop="@+id/enabledRoleStatus"
        android:layout_marginLeft="84dp" />

    <TextView
        android:id="@+id/enabledRoleStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/roleName"
        android:layout_below="@+id/roleNameFill"
        android:layout_marginTop="35dp"
        android:text="@string/enabled"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enabledRoleStatus"
        android:layout_below="@+id/enabledRoleStatusBox"
        android:layout_marginTop="29dp"
        android:text="@string/display_users"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/deleteRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tempAccess"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/tempAccess"
        android:clickable="true"
        android:onClick="confirmDelete"
        android:text="@string/delete"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tempFingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:layout_centerHorizontal="true"
        android:text="Temp user name" />

    <TextView
        android:id="@+id/updateRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/deleteRole"
        android:layout_alignBottom="@+id/deleteRole"
        android:layout_toLeftOf="@+id/tempAccess"
        android:clickable="true"
        android:onClick="updateRole"
        android:text="@string/update"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user"
        android:layout_below="@+id/tempFingerprint"
        android:layout_marginTop="33dp"
        android:text="@string/access_hours"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tempAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/access"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="temp access" />

</RelativeLayout>