<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScanPrint" >

    <TextView
        android:id="@+id/manageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:layout_marginTop="70sp"
        android:gravity="center_horizontal"
        android:text="@string/manage"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        android:clickable="true"
        android:onClick="displayUsers"
        android:text="@string/display_users"
        android:textColor="@color/selector"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/roles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        android:clickable="true"
        android:onClick="displayRoles"
        android:text="@string/display_roles"
        android:textColor="@color/selector"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        android:clickable="true"
        android:onClick="displayLog"
        android:text="@string/display_log"
        android:textColor="@color/selector"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/unlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        android:clickable="true"
        android:onClick="unlockDoor"
        android:text="@string/unlock"
        android:textColor="@color/selector"
        android:textSize="25sp" />

</LinearLayout>